--- a/pom.xml
+++ b/pom.xml
@@ -213,47 +213,41 @@
 				</configuration>
 			</plugin>
 
-			<!-- Copy static web files before executing gwt:run -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.3</version>
+				<version>3.0.0</version>
 				<executions>
+					<!-- Copy static web files before executing gwt:run -->
 					<execution>
+						<id>execution1</id>
 						<phase>compile</phase>
 						<goals>
 							<goal>exploded</goal>
 						</goals>
+						<configuration>
+							<webappDirectory>${webappDirectory}</webappDirectory>
+							<!-- This will create a jar that can be used for integration testing -->
+							<attachClasses>true</attachClasses>
+						</configuration>
 					</execution>
-				</executions>
-				<configuration>
-					<webappDirectory>${webappDirectory}</webappDirectory>
-					<!-- This will create a jar that can be used for integration testing -->
-					<attachClasses>true</attachClasses>
-				</configuration>
-			</plugin>
-			
-			<!-- This next section is to copy the source maps into the WEB-INF directory (during the package phase, from junit output) -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-war-plugin</artifactId>
-				<version>2.3</version>
-				<executions>
+					<!-- This next section is to copy the source maps into the WEB-INF directory (during the package phase, from junit output) -->
 					<execution>
+						<id>execution2</id>
 						<phase>package</phase>
 						<goals>
 							<goal>exploded</goal>
 						</goals>
+						<configuration>
+							<webResources>
+								<resource>
+									<directory>${webappDirectory}/Portal/.junit_symbolMaps/</directory>
+									<targetPath>WEB-INF</targetPath>
+								</resource>
+							</webResources>
+						</configuration>
 					</execution>
 				</executions>
-				<configuration>
-					<webResources>
-						<resource>
-							<directory>${webappDirectory}/Portal/.junit_symbolMaps/</directory>
-							<targetPath>WEB-INF</targetPath>
-						</resource>
-					</webResources>
-				</configuration>
 			</plugin>
 			
 			<!-- We use this assembly to package the GWT RPC dependencies so they 
