--- a/src/main/resources/portal.properties
+++ b/src/main/resources/portal.properties
@@ -72,5 +72,6 @@ org.sagebionetworks.portal.biodalliance.mouse.stylesheet=syn4557587.1
 org.sagebionetworks.portal.act.synapse_storage_id=syn7444807
 org.sagebionetworks.portal.synapse_storage_id=1
 
+org.sagebionetworks.portal.html_team_id=3351236
 
 
