--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -40,12 +40,19 @@
 		<filter-name>guiceFilter</filter-name>
 		<filter-class>com.google.inject.servlet.GuiceFilter</filter-class>
 	</filter>
-
+	<filter>
+		<filter-name>corsFilter</filter-name>
+		<filter-class>org.sagebionetworks.web.server.servlet.filter.CORSFilter</filter-class>
+	</filter>
+	
 	<filter-mapping>
 		<filter-name>cacheFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+	<filter-mapping>
+		<filter-name>corsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>cacheAllFilter</filter-name>
 		<url-pattern>/js/*</url-pattern>
