refactor in progress

--- a/src/main/resources/portal.properties
+++ b/src/main/resources/portal.properties
@@ -43,6 +43,8 @@ org.sagebionetworks.portal.confluence_endpoint=https://sagebionetworks.jira.com
 
 org.sagebionetworks.portal.sftp_proxy_endpoint=https://sftp2.synapse.org/sftp
 
+org.sagebionetworks.portal.nbconvert_endpoint=https://nbconvert.synapse.org
+
 org.sagebionetworks.portal.collaboratorium_synapse_id=syn2754116
 org.sagebionetworks.portal.stageI_synapse_id=syn2754288
 org.sagebionetworks.portal.stageII_synapse_id=syn2754289
