--- a/src/main/resources/portal.properties
+++ b/src/main/resources/portal.properties
@@ -43,7 +43,7 @@ org.sagebionetworks.portal.confluence_endpoint=https://sagebionetworks.jira.com
 
 org.sagebionetworks.portal.sftp_proxy_endpoint=https://sftp2.synapse.org/sftp
 
-org.sagebionetworks.portal.nbconvert_endpoint=https://nbconvert.synapse.org
+org.sagebionetworks.portal.nbconvert_endpoint=https://swukhjbhuj.execute-api.us-east-1.amazonaws.com/prod/nbconvert?file=
 
 org.sagebionetworks.portal.collaboratorium_synapse_id=syn2754116
 org.sagebionetworks.portal.stageI_synapse_id=syn2754288
