add new mapping

--- a/src/main/resources/portal.properties
+++ b/src/main/resources/portal.properties
@@ -23,6 +23,7 @@ org.sagebionetworks.portal.wikis.WhyGetValidated=syn3722562/338504
 org.sagebionetworks.portal.wikis.Provenance=syn2305384/62865
 org.sagebionetworks.portal.wikis.FormattingGuide=syn2467792/64247
 org.sagebionetworks.portal.wikis.SynapseForm=syn3722562/393364
+org.sagebionetworks.portal.wikis.DigitalHealth=syn3722562/499419
 
 org.sagebionetworks.portal.forum_project_id=syn5637528
 
