--- a/pom.xml
+++ b/pom.xml
@@ -301,6 +301,7 @@
 					<outputPath>${webappDirectory}</outputPath>
 					<outputStyle>compressed</outputStyle>
 					<includePath>${basedir}/src/main/sass/plugins/</includePath>
+					<sourceMapOutputPath>${webappDirectory}</sourceMapOutputPath>
 				</configuration>
 			</plugin>
 		</plugins>
