--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,10 @@
 		<filter-class>org.sagebionetworks.web.server.servlet.filter.GWTAllCacheFilter</filter-class>
 	</filter>
 	<filter>
+		<filter-name>hstsFilter</filter-name>
+		<filter-class>org.sagebionetworks.web.server.servlet.filter.HSTSFilter</filter-class>
+	</filter>
+	<filter>
 		<filter-name>xFilter</filter-name>
 		<filter-class>org.sagebionetworks.web.server.servlet.filter.XFilter</filter-class>
 	</filter>
@@ -42,9 +46,14 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 	<filter-mapping>
+		<filter-name>hstsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
+	<filter-mapping>
 		<filter-name>cacheAllFilter</filter-name>
 		<url-pattern>/js/*</url-pattern>
 		<url-pattern>/images/*</url-pattern>
+		<url-pattern>/research/*</url-pattern>
 	</filter-mapping>
 	
 	<filter-mapping>
