revert last change, and try setting the MaxDirectMemorySize...

--- a/pom.xml
+++ b/pom.xml
@@ -207,9 +207,8 @@
 					<!-- <compilerMetrics>true</compilerMetrics> -->
 					<logLevel>INFO</logLevel>
 					<sourceLevel>auto</sourceLevel>
-					<extraJvmArgs>-Xmx2048m -Xms2048m</extraJvmArgs>
+					<extraJvmArgs>-Xmx2048m -Xms2048m -XX:MaxDirectMemorySize=256m</extraJvmArgs>
 					<fragmentCount>1</fragmentCount>
-					<gwt-plugin.localWorkers>1</gwt-plugin.localWorkers>
 					<disableCastChecking>true</disableCastChecking>
 					<disableClassMetaData>true</disableClassMetaData>
 				</configuration>
