SWC-4643: send error codes to an error.html, which redirects to an error place (with a generic error)

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -109,4 +109,19 @@
 	  <servlet-name>jUnitHostImpl</servlet-name>
 	  <url-pattern>/Portal/remote_logging</url-pattern>
 	</servlet-mapping>
+	<error-page>
+		<!-- Missing resource -->
+		<error-code>404</error-code>
+		<location>/Error.html</location>
+	</error-page>
+	<error-page>
+	    <!-- Uncaught exception -->
+	    <error-code>500</error-code>
+	    <location>/Error.html</location>
+	</error-page>
+	<error-page>
+	    <!-- Unsupported servlet method -->
+	    <error-code>503</error-code>
+	    <location>/Error.html</location>
+	</error-page>
 </web-app>
