--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<webappDirectory>${project.build.directory}/${project.build.finalName}</webappDirectory>
-		<synapse.version>2018-12-05-126-30f0153</synapse.version>
+		<synapse.version>252.0-17-gc9a4e8a</synapse.version>
 		<gwtVersion>2.8.2</gwtVersion>
 		<org.springframework.version>4.3.18.RELEASE</org.springframework.version>
 		<guiceVersion>3.0</guiceVersion>
