--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -32,6 +32,10 @@
 		<filter-name>corsFilter</filter-name>
 		<filter-class>org.sagebionetworks.web.server.servlet.filter.CORSFilter</filter-class>
 	</filter>
+	<filter>
+		<filter-name>xFrameOptionsFilter</filter-name>
+		<filter-class>org.sagebionetworks.web.server.servlet.filter.XFrameOptionsFilter</filter-class>
+	</filter>
 	
 	<filter-mapping>
 		<filter-name>cacheFilter</filter-name>
@@ -56,7 +60,10 @@
 		<filter-name>sslFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
-	
+	<filter-mapping>
+		<filter-name>xFrameOptionsFilter</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 	<filter-mapping>
 		<filter-name>crawlFilter</filter-name>
 		<url-pattern>/*</url-pattern>
